B-1000 fixing z-index issue on forward and back buttons and js cleanup

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ text-align: center;
 margin-top: 3%;
 opacity: .6;
 position: absolute;
-z-index: 1;
+z-index: 2;
 }
 .navContainer button{
   border: none;
